--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,4 @@ title: Home
 layout: base_no_topnav
 ---
 <br/>
-<div id="index-nav">
-    {% include "partials/navigation.njk" %}
-</div>
+<img src="/images/hi.png" alt="an ms-paint image containing 'Hi'" />
