deploy: 686b83ae016909b3143b06d28dd82a40a94a69a4

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="robots" content="noimageai" />
   <meta name="robots" content="noai" />
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Home - ">
+  <meta property="og:title" content="the index page - /home/joshpsawyer - a small website">
   
     <meta name="description" content="all the recipes and info you might need if you're going into the wildlands.">
     <meta property="og:description" content="all the recipes and info you might need if you're going into the wildlands.">
@@ -14,9 +14,9 @@
   
     <meta property="og:image" content="/assets/images/wildlands.png">
   
-  <link rel="stylesheet" href="/css/style.css?v=1741467439" type="text/css" />
-  <link rel="stylesheet" href="/css/print.css?v=1741467439" type="text/css" media="print" />
-  <title>Home - </title>
+  <link rel="stylesheet" href="/css/style.css?v=1741467769" type="text/css" />
+  <link rel="stylesheet" href="/css/print.css?v=1741467769" type="text/css" media="print" />
+  <title>the index page - /home/joshpsawyer - a small website</title>
 </head>
 <body>
   <!-- <input id="color-mode" type="checkbox" name="color-mode">
