deploy: a6f3647ef34bcd0cd7c58060078cd757618bbc2f

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   
     <meta property="og:image" content="/assets/images/wildlands.png">
   
-  <link rel="stylesheet" href="/css/style.css?v=1741710960" type="text/css" />
-  <link rel="stylesheet" href="/css/print.css?v=1741710960" type="text/css" media="print" />
+  <link rel="stylesheet" href="/css/style.css?v=1741727069" type="text/css" />
+  <link rel="stylesheet" href="/css/print.css?v=1741727069" type="text/css" media="print" />
   <title>the index page - /home/joshpsawyer - a small website</title>
 </head>
 <body>
@@ -36,6 +36,7 @@
     <nav>
     <a href="/about/">about</a>
     <a href="/projects/">projects</a>
+    <a href="https://github.com/joshpsawyer" target=""_blank>github</a>
 </nav>
 </div>
 
