--- a/about/index.html
+++ b/about/index.html
@@ -14,8 +14,8 @@
   
     <meta property="og:image" content="/assets/images/wildlands.png">
   
-  <link rel="stylesheet" href="/css/style.css?v=1741710960" type="text/css" />
-  <link rel="stylesheet" href="/css/print.css?v=1741710960" type="text/css" media="print" />
+  <link rel="stylesheet" href="/css/style.css?v=1741727069" type="text/css" />
+  <link rel="stylesheet" href="/css/print.css?v=1741727069" type="text/css" media="print" />
   <title>all about uhh josh - /home/joshpsawyer - a small website</title>
 </head>
 <body>
@@ -49,6 +49,7 @@
       <div id="footer-nav"><nav>
     <a href="/about/">about</a>
     <a href="/projects/">projects</a>
+    <a href="https://github.com/joshpsawyer" target=""_blank>github</a>
 </nav></div>
     </div>
     <div class="bottom-line"></div>
