--- a/about/index.html
+++ b/about/index.html
@@ -14,8 +14,8 @@
   
     <meta property="og:image" content="/assets/images/wildlands.png">
   
-  <link rel="stylesheet" href="/css/style.css?v=1741735091" type="text/css" />
-  <link rel="stylesheet" href="/css/print.css?v=1741735091" type="text/css" media="print" />
+  <link rel="stylesheet" href="/css/style.css?v=1741791924" type="text/css" />
+  <link rel="stylesheet" href="/css/print.css?v=1741791924" type="text/css" media="print" />
   <title>all about uhh josh - /home/joshpsawyer - a small website</title>
 </head>
 <body>
@@ -27,7 +27,11 @@
   <div class="color-scheme-wrapper">
     <div id="nav-wrapper">
       <div id="site-logo-text"><a href="/">/home/joshpsawyer</a></div>
-      
+      <div id="header-nav-bar"><nav>
+    <a href="/about/">about</a>
+    <a href="/projects/">projects</a>
+    <a href="https://github.com/joshpsawyer" target=""_blank>github</a>
+</nav></div>
     </div>
     <div id="main-wrapper">
       <main>
@@ -44,13 +48,6 @@
 <p>Contact me at <em>josh [at] joshpsawyer [dot] com</em> for any of the above or just to say hi.</p>
 
       </main>
-    </div>
-    <div id="footer-nav-wrapper">
-      <div id="footer-nav"><nav>
-    <a href="/about/">about</a>
-    <a href="/projects/">projects</a>
-    <a href="https://github.com/joshpsawyer" target=""_blank>github</a>
-</nav></div>
     </div>
     <div class="bottom-line"></div>
     <div class="bottom-line"></div>
